Adds basic countdown timer.

--- a/client/templates/timer.html
+++ b/client/templates/timer.html
@@ -1,5 +1,5 @@
 <template name="timer">
   <div class="Timer">
-    <div class="Timer-countdown">24:12</div>
+    <div class="Timer-countdown">{{getCountdown}} seconds left!</div>
   </div>
 </template>
