--- a/client/css/timer.import.less
+++ b/client/css/timer.import.less
@@ -3,12 +3,12 @@
 
 .Timer-label {
   font-family: 'Oswald', sans-serif;
-  color: rgba(255, 255, 255, 0.075);
-  font-size: 70px;
+  font-weight: 700;
+  color: @color-theme;
+  font-size: 60px;
   letter-spacing: 10px;
   text-transform: uppercase;
   margin: 0 auto;
-  max-width: 350px;
   line-height: 120px;
   text-align: center;
 }
@@ -16,11 +16,25 @@
 .Timer-countdown {
   font-family: 'Cutive Mono', monospace;
   font-size: 120px;
-  color: rgba(255, 255, 255, 0.9);
+  color: @color-dark-gray;
   text-align: center;
   letter-spacing: -10px;
   position: absolute;
   top: 55px;
-  left: 0;
+  left: -10px;
   right: 0;
+}
+
+@media (min-width: 400px) {
+  .Timer-label {
+    font-size: 80px;
+    line-height: 140px;
+    max-width: 380px;
+  }
+
+  .Timer-countdown {
+    font-size: 140px;
+    top: 65px;
+    letter-spacing: -15px;
+  }
 }
