--- a/client/css/timer.import.less
+++ b/client/css/timer.import.less
@@ -8,7 +8,7 @@
   font-size: 60px;
   letter-spacing: 10px;
   text-transform: uppercase;
-  margin: 0 auto;
+  margin: -20px auto 0 auto;
   line-height: 120px;
   text-align: center;
 }
@@ -20,7 +20,7 @@
   text-align: center;
   letter-spacing: -10px;
   position: absolute;
-  top: 55px;
+  top: 35px;
   left: -10px;
   right: 0;
 }
@@ -30,6 +30,7 @@
     font-size: 80px;
     line-height: 140px;
     max-width: 380px;
+    margin-top: 0;
   }
 
   .Timer-countdown {
