--- a/client/css/app.less
+++ b/client/css/app.less
@@ -15,4 +15,5 @@ body {
   background-color: @color-light-gray;
   margin: 0;
   padding: 0;
+  font-family: 'Oswald', 'Helvetica Neue', 'Segoe UI', sans-serif;
 }
