Adds general body padding.

--- a/client/css/app.less
+++ b/client/css/app.less
@@ -14,6 +14,6 @@
 body {
   background-color: @color-light-gray;
   margin: 0;
-  padding: 0;
+  padding: 20px;
   font-family: 'Oswald', 'Helvetica Neue', 'Segoe UI', sans-serif;
 }
