--- a/client/css/timer.import.less
+++ b/client/css/timer.import.less
@@ -8,7 +8,7 @@
   font-size: 60px;
   letter-spacing: 10px;
   text-transform: uppercase;
-  margin: -20px auto 0 auto;
+  margin: -40px -20px 0 -20px;
   line-height: 120px;
   text-align: center;
 }
@@ -30,7 +30,7 @@
     font-size: 80px;
     line-height: 140px;
     max-width: 380px;
-    margin-top: 0;
+    margin: -20px auto 0 auto;
   }
 
   .Timer-countdown {
