Hides image for now (need to figure out how to style) and swaps font weights.

--- a/client/css/tasks.import.less
+++ b/client/css/tasks.import.less
@@ -17,14 +17,17 @@
 }
 
 .Tasks-taskOwner {
-
+  font-weight: 400;
 }
 
 .Tasks-taskTitle {
-  font-weight: 400;
 }
 
 .Tasks-taskStatus {
   position: absolute;
   right: 20px;
+}
+
+.Tasks-taskOwnerImage {
+  display: none; /* Hide for now */
 }
