--- a/client/css/app.less
+++ b/client/css/app.less
@@ -10,6 +10,7 @@
 // Components.
 @import 'timer.import.less';
 @import 'tasks.import.less';
+@import 'controls.import.less';
 
 // Basic body styles.
 body {
