Add angled background to timer.

--- a/client/css/timer.import.less
+++ b/client/css/timer.import.less
@@ -1,4 +1,15 @@
 .Timer {
+  position: relative;
+}
+
+.Timer-background {
+  background-color: #ffffff;
+  position: absolute;
+  top: -500px;
+  left: -500px;
+  right: -500px;
+  bottom: 0;
+  transform: rotate(3deg);
 }
 
 .Timer-label {
@@ -11,6 +22,7 @@
   margin: -40px -20px 0 -20px;
   line-height: 120px;
   text-align: center;
+  position: relative;
 }
 
 .Timer-countdown {
