Renames Tasks component to TasksList.

--- a/client/css/app.less
+++ b/client/css/app.less
@@ -9,7 +9,7 @@
 
 // Components.
 @import 'timer.import.less';
-@import 'tasks.import.less';
+@import 'tasksList.import.less';
 @import 'controls.import.less';
 
 // Basic body styles.
