--- a/client/css/tasksList.import.less
+++ b/client/css/tasksList.import.less
@@ -1,33 +1,33 @@
-.Tasks {
+.TasksList {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.Tasks-task {
+.TasksList-task {
   font-size: 20px;
   font-weight: 300;
 
-  &.Tasks-task--success {
+  &.TasksList-task--success {
     background:lawngreen;
   }
-  &.Tasks-task--fail {
+  &.TasksList-task--fail {
     background:palevioletred;
   }
 }
 
-.Tasks-taskOwner {
+.TasksList-taskOwner {
   font-weight: 400;
 }
 
-.Tasks-taskTitle {
+.TasksList-taskTitle {
 }
 
-.Tasks-taskStatus {
+.TasksList-taskStatus {
   position: absolute;
   right: 20px;
 }
 
-.Tasks-taskOwnerImage {
+.TasksList-taskOwnerImage {
   display: none; /* Hide for now */
 }
