Fixes position of the login form.

--- a/client/css/controls.import.less
+++ b/client/css/controls.import.less
@@ -7,5 +7,14 @@
 }
 
 .Controls-login {
-  
+  position: absolute;
+  bottom: 0;
+  right: 0;
+
+  #login-dropdown-list {
+    top: auto;
+    left: auto;
+    right: -1px;
+    bottom: -1px;
+  }
 }
