--- a/client/css/tasksList.import.less
+++ b/client/css/tasksList.import.less
@@ -1,7 +1,8 @@
 .TasksList {
   list-style: none;
-  margin: 0;
-  padding: 0;
+  padding: 50px 0;
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .TasksList-task {
@@ -21,11 +22,6 @@
 }
 
 .TasksList-taskTitle {
-}
-
-.TasksList-taskStatus {
-  position: absolute;
-  right: 20px;
 }
 
 .TasksList-taskOwnerImage {
