--- a/client/css/timer.import.less
+++ b/client/css/timer.import.less
@@ -13,7 +13,7 @@
 }
 
 .Timer-label {
-  font-family: 'Oswald', sans-serif;
+  font-family: @font-sans;
   font-weight: 700;
   color: @color-theme;
   font-size: 60px;
@@ -26,7 +26,7 @@
 }
 
 .Timer-countdown {
-  font-family: 'Cutive Mono', monospace;
+  font-family: @font-mono;
   font-size: 120px;
   color: @color-dark-gray;
   text-align: center;
