Quick styling of task list image and title.

--- a/client/css/controls.import.less
+++ b/client/css/controls.import.less
@@ -22,6 +22,15 @@
   margin: 0 auto;
 }
 
+.Controls-message {
+  font-size: 24px;
+  font-weight: 300;
+
+  strong {
+    font-weight: 400;
+  }
+}
+
 .Controls-taskForm {
   margin-top: 50px;
 
@@ -44,7 +53,8 @@
     right: 0;
     font-weight: 400;
     background-color: #333;
-    color: @color-theme;
+    color: rgba(255,255,255,0.8);
+    text-transform: uppercase;
   }
 }
 
