--- a/client/css/tasksList.import.less
+++ b/client/css/tasksList.import.less
@@ -22,8 +22,13 @@
 }
 
 .TasksList-taskTitle {
+  font-size: 32px;
 }
 
 .TasksList-taskOwnerImage {
-  display: none; /* Hide for now */
+  width: 32px;
+  height: auto;
+  border-radius: 16px;
+  top: 7px;
+  position: relative;
 }
